Changed rfc6455 dep

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     }
   , "require": {
         "php": ">=5.4.2"
-      , "ratchet/rfc6455": "dev-master"
+      , "ratchet/rfc6455": "^0.3.1@dev"
       , "react/socket": "^1.0 || ^0.8 || ^0.7 || ^0.6 || ^0.5"
       , "react/event-loop": ">=0.4"
       , "guzzlehttp/psr7": "^1.7|^2.0"
